Changelog
=========

3.0.3 (unreleased)
------------------

- Nothing changed yet.


3.0.2 (2013-04-30)
------------------

- Fix configuration error by forcing the load zcml of CMFDynamicViewFTI [toutpt]


3.0.1 (2013-04-29)
------------------

- protect configviews form with a permission [toutpt]


3.0 (2013-03-25)
----------------

- add support for viewlet [toutpt]


3.0a1 (2013-02-15)
------------------

- Revert to 1.0 internal design. [toutpt]


2.0 (2012-01-30)
----------------

- Use collective.registry instead of provider/mutator [toutpt]

1.0b4 (2011-12-07)
------------------

- add new classifiers [toutpt]
- fix tests [toutpt]
- fix issue making edit configuration not working [naro]

1.0b3 (2011-08-01)
------------------

- Optimization of storage: defaults are now based on all provider except zope.app.annotation
  [toutpt]
- fix case where site.plone.app.registry are not set (value was set to None)
  [toutpt]

1.0b2 (2011-06-30)
------------------

- Fix config form (http://stackoverflow.com/q/6524304/622081)


1.0b1 (2011-06-08)
------------------

- Initial release