@@ -15,6 +15,13 @@
       description="Installs the collective.configviews package"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="collective.configviews uninstall"
+      directory="profiles/uninstall"
+      description="Uninstalls the collective.configviews package"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
   <!-- -*- extra stuff goes here -*- -->
 
   <i18n:registerTranslations directory="locales" />
