@@ -4,7 +4,8 @@ Changelog
 3.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add uninstall profile.
+  [thet]
 
 
 3.0.2 (2013-04-30)
